# logiplanner

./: .env.example  .gitignore  CODEBASE_CONTEXT.md  RAG_SYSTEM.md  README.md  alembic.ini  clearusers.py  hf_embeddings_guide.md  init_meetings_db.py  logiplanner.db  main.py  pyproject.toml  requirements.txt  tmp_db_test.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: .instructions.md
app/: main.py
app/api/v1/: auth.py  (+8 more)
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: calendar_task.py  meeting.py  timeline.py  user.py
app/rag/: __init__.py  engine.py  processor.py  prompts.py
app/schemas/: auth.py  calendar_task.py  meeting.py  onboarding.py  rag.py  settings.py  timeline.py
app/templates/: ai-brain.html  base.html  coming_soon.html  dashboard.html  home.html  memory.html  settings.html  studio.html
app/utils/: email.py
chroma_data/: chroma.sqlite3
migrations/: env.py
migrations/versions/: 0090822d09d0_add_timeline_table.py  3b73ea06db52_.py  44a7f68b2a74_add_note_type_to_meeting_notes.py  46d473c26188_.py  46d473c26188_merge_googledrive_and_meeting_notes_branches.py  51c7c579f9e3_add_task_type_column.py  5484509221af_add_comment_nested_replies_and_reactions.py  7023168cee50_add_post_level_reactions.py  83b3d2023447_.py  86a107e46abc_add_missing_user_notification_columns.py  8c1e42c6372f_add_calendar_tasks_table.py  97572d2011de_add_author_and_tags_to_timeline.py  9b870d98ae44_timeline_project_id_to_team_id.py  9dc80657e12e_merge_migrations.py  a1b2c3d4e5f7_add_meeting_boards.py  (+24 more)
(+41 files in other folders)
